# MarkovianTweeter

./: CMakeLists.txt  README.md  main.cpp
dependencies/barbeque/: barbeque.cpp  barbeque.h
dependencies/base64/: base64.hpp  base64_decode.cpp  base64_encode.cpp
dependencies/curl/: curl.cpp  curl.h
markov/: markov.cpp  markov.h  markov_chain.cpp  markov_chain.h
twitter/: twitter_client.cpp  twitter_client.h
